--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    <!-- NAVIGATION -->
     <header class="header">
       <nav>
         <div class="header-logo">
@@ -28,10 +30,78 @@
             <li><a href="">Careers</a></li>
           </ul>
         </div>
-        <div class="header-btn">
+        <div class="header-btn btn">
           <button>Request Invite</button>
         </div>
       </nav>
     </header>
+
+    <!-- HERO SECTION -->
+    <main class="hero">
+      <div class="hero-text hero-item">
+        <h1>Next generation <br />digital banking</h1>
+        <p>
+          Take your financial life online. Your Easybank account <br />
+          will be a one-stop-shop for spending, saving, <br />
+          budgeting, investing, and much more.
+        </p>
+        <button class="hero-btn btn">Request Invite</button>
+      </div>
+      <div class="hero-image hero-item">
+        <!-- <img src="images/bg-intro-desktop.svg" alt="" class="hero-bg" /> -->
+        <img src="images/image-mockups.png" alt="" class="hero-phone" />
+      </div>
+    </main>
+
+    <!-- REASON SECTION -->
+    <section class="reason">
+      <div class="reason-details">
+        <h2>Why choose Easybank?</h2>
+        <p>
+          We leverage Open Banking to turn your bank account into your financial
+          hub. <br />
+          Control your finances like never before
+        </p>
+      </div>
+      <div class="reason-box-container">
+        <!-- Reason Boxes -->
+        <div class="reason-box">
+          <img src="images/icon-online.svg" alt="" />
+          <h3>Online Banking</h3>
+          <p>
+            Online Banking Our modern web and mobile applications allow you to
+            keep track of your finances wherever you are in the world.
+          </p>
+        </div>
+        <div class="reason-box">
+          <img src="images/icon-budgeting.svg" alt="" />
+          <h3>Simple Budgeting</h3>
+          <p>
+            See exactly where your money goes each month. Receive notifications
+            when you’re close to hitting your limits.
+          </p>
+        </div>
+        <div class="reason-box">
+          <img src="images/icon-onboarding.svg" alt="" />
+          <h3>Fast Onboarding</h3>
+          <p>
+            We don’t do branches. Open your account in minutes online and start
+            taking control of your finances right away.
+          </p>
+        </div>
+        <div class="reason-box">
+          <img src="images/icon-api.svg" alt="" />
+          <h3>Open API</h3>
+          <p>
+            Manage your savings, investments, pension, and much more from one
+            account. Tracking your money has never been easier.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="article">
+      <h2>Latest Articles</h2>
+    </section>
   </body>
 </html>
