--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/hero.css" />
     <link rel="stylesheet" href="styles/reason.css" />
+    <link rel="stylesheet" href="styles/article.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -79,14 +80,14 @@
           <h3>Simple Budgeting</h3>
           <p>
             See exactly where your money goes each month. Receive notifications
-            when you’re close to hitting your limits.
+            when you're close to hitting your limits.
           </p>
         </div>
         <div class="reason-box">
           <img src="images/icon-onboarding.svg" alt="" />
           <h3>Fast Onboarding</h3>
           <p>
-            We don’t do branches. Open your account in minutes online and start
+            We don't do branches. Open your account in minutes online and start
             taking control of your finances right away.
           </p>
         </div>
@@ -103,6 +104,72 @@
 
     <section class="article">
       <h2>Latest Articles</h2>
+      <div class="article-container">
+        <!-- Box Starts Here-->
+        <div class="article-box">
+          <div class="article-box-image">
+            <img src="images/image-currency.jpg" class="img1" alt="" />
+          </div>
+          <div class="article-box-content">
+            <h4>By Claire Robinson</h4>
+            <h3>Receive money in any currency with no fees</h3>
+            <p>
+              The world is getting smaller and we're becoming more mobile. So
+              why should you be forced to only receive money in a single …
+            </p>
+          </div>
+        </div>
+        <!-- Box Ends Here -->
+
+        <!-- Box Starts Here-->
+        <div class="article-box">
+          <div class="article-box-image">
+            <img src="images/image-restaurant.jpg" alt="" />
+          </div>
+          <div class="article-box-content">
+            <h4>By Wilson Hutton</h4>
+            <h3>Treat yourself without worrying about moneys</h3>
+            <p>
+              Our simple budgeting feature allows you to separate out your
+              spending and set realistic limits each month. That means you …
+            </p>
+          </div>
+        </div>
+        <!-- Box Ends Here -->
+
+        <!-- Box Starts Here-->
+        <div class="article-box">
+          <div class="article-box-image">
+            <img src="images/image-plane.jpg" alt="" />
+          </div>
+          <div class="article-box-content">
+            <h4>By Claire Robinson</h4>
+            <h3>Take your Easybank card wherever you go</h3>
+            <p>
+              We want you to enjoy your travels. This is why we don't charge any
+              fees on purchases while you're abroad. We'll even show you …
+            </p>
+          </div>
+        </div>
+        <!-- Box Ends Here -->
+
+        <!-- Box Starts Here-->
+        <div class="article-box">
+          <div class="article-box-image">
+            <img src="images/image-confetti.jpg" alt="" />
+          </div>
+          <div class="article-box-content">
+            <h4>By Wilson Hutton</h4>
+            <h3>Our invite-only Beta accounts are now live!</h3>
+            <p>
+              After a lot of hard work by the whole team, we're excited to
+              launch our closed beta. It's easy to request an invite through the
+              site ...
+            </p>
+          </div>
+        </div>
+        <!-- Box Ends Here -->
+      </div>
     </section>
   </body>
 </html>
