Added footer section, footer.css, changed header logo, structured and designed the footer section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/hero.css" />
     <link rel="stylesheet" href="styles/reason.css" />
     <link rel="stylesheet" href="styles/article.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -102,6 +103,7 @@
       </div>
     </section>
 
+    <!-- ARTICLE SECTION -->
     <section class="article">
       <h2>Latest Articles</h2>
       <div class="article-container">
@@ -171,5 +173,38 @@
         <!-- Box Ends Here -->
       </div>
     </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="images/logo white.svg" alt="" />
+
+          <ul class="footer-logo-socials">
+            <li><img src="images/icon-facebook.svg" alt="" /></li>
+            <li><img src="images/icon-youtube.svg" alt="" /></li>
+            <li><img src="images/icon-twitter.svg" alt="" /></li>
+            <li><img src="images/icon-pinterest.svg" alt="" /></li>
+            <li><img src="images/icon-instagram.svg" alt="" /></li>
+          </ul>
+        </div>
+        <div class="footer-nav">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-cta">
+        <button class="btn">Request Invite</button>
+        <span>© Easybank. All Rights Reserved</span>
+      </div>
+    </footer>
   </body>
 </html>
