Made navigation and hero  responsive

--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
         <div class="header-btn btn">
           <button>Request Invite</button>
         </div>
+
+        <div class="mobile-nav" id="mobile-nav-links">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Careers</a></li>
+          </ul>
+        </div>
+
+        <div class="mobile-menu" id="menu-btn">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
       </nav>
     </header>
 
@@ -206,5 +222,7 @@
         <span>© Easybank. All Rights Reserved</span>
       </div>
     </footer>
+
+    <script src="script/script.js"></script>
   </body>
 </html>
