--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>Easy Bank</title>
   </head>
   <body>
     <!-- NAVIGATION -->
