fixed image size bug, made the article section responsive

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!-- Box Starts Here-->
         <div class="article-box">
           <div class="article-box-image">
-            <img src="images/image-currency.jpg" class="img1" alt="" />
+            <img src="images/money.jpg" alt="" />
           </div>
           <div class="article-box-content">
             <h4>By Claire Robinson</h4>
@@ -143,11 +143,11 @@
         <!-- Box Starts Here-->
         <div class="article-box">
           <div class="article-box-image">
-            <img src="images/image-restaurant.jpg" alt="" />
+            <img src="images/restaurant.jpg" alt="" />
           </div>
           <div class="article-box-content">
             <h4>By Wilson Hutton</h4>
-            <h3>Treat yourself without worrying about moneys</h3>
+            <h3>Enjoy yourself without worrying about money</h3>
             <p>
               Our simple budgeting feature allows you to separate out your
               spending and set realistic limits each month. That means you …
@@ -159,7 +159,7 @@
         <!-- Box Starts Here-->
         <div class="article-box">
           <div class="article-box-image">
-            <img src="images/image-plane.jpg" alt="" />
+            <img src="images/plane.jpg" alt="" />
           </div>
           <div class="article-box-content">
             <h4>By Claire Robinson</h4>
@@ -175,7 +175,7 @@
         <!-- Box Starts Here-->
         <div class="article-box">
           <div class="article-box-image">
-            <img src="images/image-confetti.jpg" alt="" />
+            <img src="images/confetti.jpg" alt="" />
           </div>
           <div class="article-box-content">
             <h4>By Wilson Hutton</h4>
@@ -183,7 +183,7 @@
             <p>
               After a lot of hard work by the whole team, we're excited to
               launch our closed beta. It's easy to request an invite through the
-              site ...
+              site.
             </p>
           </div>
         </div>
