fixed mobile nav initial state bug

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <button>Request Invite</button>
         </div>
 
-        <div class="mobile-nav" id="mobile-nav-links">
+        <div class="mobile-nav" id="mobile-nav-links" style="display: none">
           <ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
