--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="images/logo white.svg" alt="" />
+          <img src="images/logo white.svg" alt="" class="logo" />
 
           <ul class="footer-logo-socials">
             <li><img src="images/icon-facebook.svg" alt="" /></li>
